# timecamp-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  models.py  pyproject.toml  requirements.txt  server.py  test_server.py  test_timecamp_api.py  test_uv_server.py  test_validation.py  timecamp-server.py
.claude/: hook-state.json  project-memory.md
specs/tasks/01-mcp-server-init/: spec.md
specs/tasks/refactor-1/: spec.md
src/timecamp_mcp_server/: __init__.py  __main__.py  cli.py  server.py
timecamp_mcp_server/: __init__.py  __main__.py
