[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timecamp-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that integrates TimeCamp time tracking directly into AI assistants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "timecamp", "time-tracking", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/timecamp-mcp-server"
Repository = "https://github.com/yourusername/timecamp-mcp-server.git"
Issues = "https://github.com/yourusername/timecamp-mcp-server/issues"

[project.scripts]
timecamp-mcp-server = "timecamp_mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/timecamp_mcp_server"]